# modus

./: .gitignore  README.md  justfile  logic.py  main.py  modus.py  pyproject.toml  test_logic.py  test_modus.py
