[project]
name = "modus"
version = "0.0.0"
description = "A natural deduction system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ruff>=0.6.8", "tabulate>=0.9.0"]

[tool.ruff]
indent-width = 2
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "single"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]
